--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+## premake5 artifacts
+bin/
+bin-int/
+
 ## OSX artifacts
 .DS_Store
 
@@ -24,6 +28,7 @@ ipch
 *.suo
 *.VC.db
 *.VC.VC.opendb
+*.vcxproj
 
 ## Getting files created in JSON/Schemas/Catalog/ from a VS2022 update
 JSON/
